k8s/monolith/bookshelf-workloads.yaml
# The Bookshelf K8s workloads


# Bookshelf monolith
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-monolith
spec:
  selector:
    matchLabels:
      app: bookshelf-monolith
  replicas: 1
  template:
    metadata:
      labels:
        app: bookshelf-monolith
    spec:
      securityContext:
        runAsUser: 1000
      restartPolicy: Always
      containers:
        - name: bookshelf-monolith
          image: urjcmpuchades/mca-bookshelf-monolith:v1.0
          securityContext:
            allowPrivilegeEscalation: false
          ports:
          - containerPort: 3000
---

# MySQL Bookshelf Monolith DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-monolith-db
spec:
  selector:
    matchLabels:
      app: bookshelf-monolith-db
  replicas: 1
  template:
    metadata:
      labels:
        app: bookshelf-monolith-db
    spec:
      containers:
        - name: bookshelf-monolith-db
          image: mysql:5.7
